--- a/templates/site/produits.html.twig
+++ b/templates/site/produits.html.twig
@@ -1,11 +1,14 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+
+<div class="carte">
  <div class="card" style="width: 18rem;">
             <img src="img/boules de gomme.png" alt="boules de gomme" class="boulesdegomme_img">
         <div class="card-body">
             <h5 class="card-title">Boules de gomme</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Billes de chewing-gum 
+            Ces petites billes ont une coque très dure, bien les ramollir dans la bouche avant de les croquer. Bon goût de fruits persistant dans la durée. <br> 6,00 € le kilo</p>
             <a href="#" class="btn btn-primary">Ajouter au panier</a>
         </div>
         </div>
@@ -14,7 +17,7 @@
             <img src="img/dragibus.png" alt="dragibus" class="dragibus_img">
         <div class="card-body">
             <h5 class="card-title">Dragibus</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Les Dragibus sont des bonbons en forme de petites billes qui peuvent se présenter en plusieurs couleurs. Ils ont un goût légèrement acide et collent aux dents. <br> 6,00 € le kilo</p>
             <a href="#" class="btn btn-primary">Ajouter au panier</a>
         </div>
         </div>
@@ -23,7 +26,7 @@
             <img src="img/bonbons fruits.png " alt="bonbons fruits" class="bonbonsfruits_img"> 
         <div class="card-body">
             <h5 class="card-title">Bonbons aux fruits</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Confiserie gélifiée fantaisie type pâtes de fruits, en forme et aux goûts fruités.<br> 6,00 € le kilo </p>
             <a href="#" class="btn btn-primary">Ajouter au panier</a>
         </div>
         </div>
@@ -32,7 +35,7 @@
             <img src="img/sucettes.jpg" alt="sucettes" class="sucettes_img">
         <div class="card-body">
             <h5 class="card-title">Sucettes</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Sucettes Chupa Chups aux saveurs assorties : fraise, orange, cerise, framboise, vanille, cola, crème-fraise <br> 6,00 € le kilo</p>
             <a href="#" class="btn btn-primary">Ajouter au panier</a>
         </div>
         </div>
@@ -41,18 +44,11 @@
            <img src="img/bonbons cola.PNG" alt="bonbons cola" class="bonbonscola_img"> 
         <div class="card-body">
             <h5 class="card-title">Bonbons au cola</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Délicieux bonbons dragéifiés au cola. Leur cœur tendre vous feront succomber !  <br> 6,00 € le kilo</p>
             <a href="#" class="btn btn-primary">Ajouter au panier</a>
         </div>
-        </div>
+</div>
 
-<div class="card" style="width: 18rem;">
-            <img src="img/boules de gomme.png" alt="boules de gomme" class="boulesdegomme_img">
-        <div class="card-body">
-            <h5 class="card-title">Boules de gomme</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Ajouter au panier</a>
-        </div>
-        </div>
+</div>
 
 {% endblock %}
