--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,10 +4,9 @@
         <meta charset="UTF-8">
         <title>{% block title %}Candy Shop !{% endblock %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel ="stylesheet"  href="Candy.css"  >
-        
-        <link rel ="stylesheet"  href="panier.css"  >
-        <link rel ="stylesheet"  href="moncompte.css"  >
+        <link rel ="stylesheet"  href="Candy.css">
+        <link rel ="stylesheet"  href="panier.css">
+        <link rel ="stylesheet"  href="moncompte.css">
         <link href="{{ asset('produits.css') }}" rel="stylesheet"/>
         <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
         <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
@@ -71,31 +70,31 @@
                 <article class="bonbons">
                     <span class="bonbons__nom">Dragibus</span>
                     <span class="bonbons__prix">5.00€</span>
-                    <a href="" class="button-light">Acheter</a>
+                    <a href="/produits" class="button-light">Acheter</a>
                 </article>
                 <img src="img/boules de gomme.png" alt="boules de gomme" class="boulesdegomme_img">
                 <article class="sneaker">
                     <span class="bonbons__nom">Boules de gomme</span>
                     <span class="bonbons__prix">5.00€</span>
-                    <a href="" class="button-light">Ajouter au panier</a>
+                    <a href="/produits" class="button-light">Ajouter au panier</a>
                 </article>
                 <img src="img/bonbons fruits.png " alt="bonbons fruits" class="bonbonsfruits_img">
                 <article class="sneaker">
                     <span class="bonbons__nom">Bonbons aux fruits</span>
                     <span class="bonbons__prix">5.00€</span>
-                    <a href="" class="button-light">Ajouter au panier</a>
+                    <a href="/produits" class="button-light">Ajouter au panier</a>
                 </article>
                 <img src="img/sucettes.jpg" alt="sucettes" class="sucettes_img">
                 <article class="sneaker">
                     <span class="bonbons__nom">Sucettes</span>
                     <span class="bonbons__prix">5.00€</span>
-                    <a href="" class="button-light">Ajouter au panier</a>
+                    <a href="/produits" class="button-light">Ajouter au panier</a>
                 </article>
                 <img src="img/bonbons cola.PNG" alt="bonbons cola" class="bonbonscola_img">
                 <article class="bonbons">
                     <span class="bonbons__nom">Bonbons au cola</span>
                     <span class="bonbons__prix">5.00€</span>
-                    <a href="" class="button-light">Ajouter au panier</a>
+                    <a href="/produits" class="button-light">Ajouter au panier</a>
                 </article>  
             </div>
                
