--- a/templates/site/accueil.html.twig
+++ b/templates/site/accueil.html.twig
@@ -12,7 +12,7 @@
             <div class="card-body">
                 <h5 class="card-title">DRAGIBUS</h5>
                 <p class="card-text">6,00 € le kilo</p>
-                <a href="#" class="btn btn-primary">ACHETER</a>
+                <a href="/panier" class="btn btn-primary">ACHETER</a>
             </div>
             </div>
 
@@ -21,7 +21,7 @@
             <div class="card-body">
                 <h5 class="card-title">BOULES DE GOMME</h5>
                 <p class="card-text">6,00 € le kilo</p>
-                <a href="#" class="btn btn-primary">ACHETER</a>
+                <a href="/panier" class="btn btn-primary">ACHETER</a>
             </div>
             </div>
                
@@ -31,7 +31,7 @@
                 <div class="card-body">
                     <h5 class="card-title">BONBONS AUX FRUITS</h5>
                     <p class="card-text">6,00 € le kilo</p>
-                    <a href="#" class="btn btn-primary">ACHETER</a>
+                    <a href="/panier" class="btn btn-primary">ACHETER</a>
                 </div>
                 </div>
 
@@ -40,7 +40,7 @@
                 <div class="card-body">
                     <h5 class="card-title">SUCETTES</h5>
                     <p class="card-text">6,00 € le kilo</p>
-                    <a href="#" class="btn btn-primary">ACHETER</a>
+                    <a href="/panier" class="btn btn-primary">ACHETER</a>
                 </div>
                 </div>
 
@@ -49,7 +49,7 @@
                 <div class="card-body">
                     <h5 class="card-title">BONBONS AUX COLA</h5>
                     <p class="card-text">6,00 € le kilo</p>
-                    <a href="#" class="btn btn-primary">ACHETER</a>
+                    <a href="/panier" class="btn btn-primary">ACHETER</a>
                 </div>
                 </div>
                 </div>
