--- a/templates/site/produits.html.twig
+++ b/templates/site/produits.html.twig
@@ -9,7 +9,7 @@
             <h5 class="card-title">Boules de gomme</h5>
             <p class="card-text">Billes de chewing-gum 
             Ces petites billes ont une coque très dure, bien les ramollir dans la bouche avant de les croquer. Bon goût de fruits persistant dans la durée. <br> 6,00 € le kilo</p>
-            <a href="#" class="btn btn-primary">Ajouter au panier</a>
+            <a href="/panier" class="btn btn-primary">Ajouter au panier</a>
         </div>
         </div>
 
@@ -18,7 +18,7 @@
         <div class="card-body">
             <h5 class="card-title">Dragibus</h5>
             <p class="card-text">Les Dragibus sont des bonbons en forme de petites billes qui peuvent se présenter en plusieurs couleurs. Ils ont un goût légèrement acide et collent aux dents. <br> 6,00 € le kilo</p>
-            <a href="#" class="btn btn-primary">Ajouter au panier</a>
+            <a href="/panier" class="btn btn-primary">Ajouter au panier</a>
         </div>
         </div>
 
@@ -27,7 +27,7 @@
         <div class="card-body">
             <h5 class="card-title">Bonbons aux fruits</h5>
             <p class="card-text">Confiserie gélifiée fantaisie type pâtes de fruits, en forme et aux goûts fruités.<br> 6,00 € le kilo </p>
-            <a href="#" class="btn btn-primary">Ajouter au panier</a>
+            <a href="/panier" class="btn btn-primary">Ajouter au panier</a>
         </div>
         </div>
 
@@ -36,7 +36,7 @@
         <div class="card-body">
             <h5 class="card-title">Sucettes</h5>
             <p class="card-text">Sucettes Chupa Chups aux saveurs assorties : fraise, orange, cerise, framboise, vanille, cola, crème-fraise <br> 6,00 € le kilo</p>
-            <a href="#" class="btn btn-primary">Ajouter au panier</a>
+            <a href="/panier" class="btn btn-primary">Ajouter au panier</a>
         </div>
         </div>
 
@@ -45,7 +45,7 @@
         <div class="card-body">
             <h5 class="card-title">Bonbons au cola</h5>
             <p class="card-text">Délicieux bonbons dragéifiés au cola. Leur cœur tendre vous feront succomber !  <br> 6,00 € le kilo</p>
-            <a href="#" class="btn btn-primary">Ajouter au panier</a>
+            <a href="/panier" class="btn btn-primary">Ajouter au panier</a>
         </div>
 </div>
 
