--- a/templates/site/moncompte.html.twig
+++ b/templates/site/moncompte.html.twig
@@ -13,6 +13,7 @@
 <div class="form-floating">
   <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
   <label for="floatingPassword">mot de passe</label>
+  <a href="#" class="btn btn-primary">M'IDENTIFIER</a>
 </div>
 
 <h2>Je créer un compte </h2>
@@ -28,6 +29,7 @@
 <div class="form-floating 2">
   <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
   <label for="floatingPassword">Vérification mot de passe</label>
+  <a href="#" class="btn btn-primary">VALIDER</a>
 </div>
 
 
