--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -44,14 +44,14 @@
                     <a class="nav-link" href="/produits">produits</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="panier">panier</a>
+                    <a class="nav-link" href="/panier">panier</a>
                 </li>
                 
                 <li class="nav-item">
                     <a class="nav-link" href="/compte">mon compte</a>
                 </li>
                <li class="nav-item">
-                    <a class="nav-link" href="/contact">contact</a>
+                    <a class="nav-link" href="{{ path('contact')}}">contact</a>
                 </li> 
                
                 <li class="nav-item">
