--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -1,9 +1,19 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Hello ContactController!{% endblock %}
+
 {% block body %}
 
+{% for message in app.flashes('message') %}
+    <div class="alert alert-success" role="alert">
+      {{ message }}
+    </div>
+  {% endfor %}
+  
+  {{form_start(contactForm)}}
 
-         <div class="col-md-4">
+  {{form(contactForm)}}
+     <div class="col-md-4">
         <label for="validationCustom01" class="form-label">Nom</label>
         <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
         <div class="mb-3">
@@ -16,4 +26,8 @@
         <a href="" class="btn btn-primary">Envoyer</a>
         </div>
 
+
+    <h1>Nous contacter </h1>
+    {{ form_end(contactForm)}}
 {% endblock %}
+
