--- a/templates/e-mail/contact.html.twig
+++ b/templates/e-mail/contact.html.twig
@@ -1,4 +1,10 @@
-<h1>Nouveau contact</h1>
-<p>Nom : {{contact.nom}}</p>
-<p>e-mail : {{contact.email}}</p>
-<p>Message : {{contact.message}}</p>
+{% extends 'base.html.twig' %}
+
+{% block body %}
+
+	<h1>Nouveau contact</h1>
+	<p>Nom :{{contact.nom}}</p>
+	<p>e-mail :{{contact.email}}</p>
+	<p>Message :{{contact.message}}</p>
+
+{% endblock %}
