--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel ="stylesheet"  href="Candy.css">
         <link rel ="stylesheet"  href="panier.css">
-        <link rel ="stylesheet"  href="moncompte.css">
+        {# <link rel ="stylesheet"  href="moncompte.css"> #}
         <link href="{{ asset('produits.css') }}" rel="stylesheet"/>
         <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
         <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
