--- a/templates/site/moncompte.html.twig
+++ b/templates/site/moncompte.html.twig
@@ -1,42 +1,36 @@
 {% extends 'base.html.twig' %}
 
 
-
-
 {% block body %}
-<h2>J'ai déjà un compte </h2>
+	<h2>J'ai déjà un compte
+	</h2>
 
-<div class="form-floating mb-3">
-  <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-  <label for="floatingInput">adresse e-mail</label>
-</div>
-<div class="form-floating">
-  <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-  <label for="floatingPassword">mot de passe</label>
-  <a href="#" class="btn btn-primary">M'IDENTIFIER</a>
-</div>
+	<div class="form-floating mb-3">
+		<input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+		<label for="floatingInput">adresse e-mail</label>
+	</div>
+	<div class="form-floating">
+		<input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+		<label for="floatingPassword">mot de passe</label>
+		<a href="#" class="btn btn-primary">M'IDENTIFIER</a>
+	</div>
 
-<h2>Je créer un compte </h2>
+	<h2>Je créer un compte
+	</h2>
 
-<div class="form-floating mb-3">
-  <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-  <label for="floatingInput">adresse e-mail</label>
-</div>
-<div class="form-floating">
-  <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-  <label for="floatingPassword">mot de passe</label>
-</div>
-<div class="form-floating 2">
-  <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-  <label for="floatingPassword">Vérification mot de passe</label>
-  <a href="#" class="btn btn-primary">VALIDER</a>
-</div>
-
-
+	<div class="form-floating mb-3">
+		<input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+		<label for="floatingInput">adresse e-mail</label>
+	</div>
+	<div class="form-floating">
+		<input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+		<label for="floatingPassword">mot de passe</label>
+	</div>
+	<div class="form-floating 2">
+		<input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+		<label for="floatingPassword">Vérification mot de passe</label>
+		<a href="#" class="btn btn-primary">VALIDER</a>
+	</div>
 
 
 {% endblock %}
-
-
-
-
