--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -50,6 +50,15 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/compte">mon compte</a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/inscription">inscription</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">connexion</a>
+                </li>
+
                <li class="nav-item">
                     <a class="nav-link" href="{{ path('contact')}}">contact</a>
                 </li> 
@@ -104,6 +113,7 @@
         {% block footer %} 
         <li class="nav-item">
             <a class="nav-link" href="/conditionsgenerales">conditions générales</a>
+            <a class="nav-link" href="/mentionslegales">mentions légales</a>
         </li>
          
         <div class="footer__box">
