--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,14 +11,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet">
         <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-        <link href="http://bootswatch.com/4/journal/bootstrap.min.css" rel="stylesheet">
+        <link href="https://bootswatch.com/4/journal/bootstrap.min.css" rel="stylesheet">
         
 
-        {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
       
-            {#{{ encore_entry_link_tags('app') }}#}
         {% endblock %}
 
         
