--- a/templates/site/produits.html.twig
+++ b/templates/site/produits.html.twig
@@ -41,7 +41,7 @@
         </div>
 
 <div class="card" style="width: 18rem;">
-           <img src="img/bonbons cola.PNG" alt="bonbons cola" class="bonbonscola_img"> 
+           <img src="img/bonbons_cola.PNG" alt="bonbons_cola" class="bonbonscola_img"> 
         <div class="card-body">
             <h5 class="card-title">Bonbons au cola</h5>
             <p class="card-text">Délicieux bonbons dragéifiés au cola. Leur cœur tendre vous feront succomber !  <br> 6,00 € le kilo</p>
