--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -1,30 +1,27 @@
 {% extends 'base.html.twig' %}
-
-{% block title %}Hello ContactController!{% endblock %}
-
 {% block body %}
 
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
 	<script type=" text/javascript">
 		(function () {
-				                emailjs.init("user_4L8v1Nc5OYhXQyuuHn9lh");
-				                })();
+		emailjs.init("user_4L8v1Nc5OYhXQyuuHn9lh");
+		 })();
 	</script>
 	<script type="text/javascript">
 		window.onload = function () {
-document.getElementById('contact-form').addEventListener('submit', function (event) {
-event.preventDefault();
-emailjs.sendForm('service_w4p95ya', 'contact_form', this).then(function () {
-alert("Votre message a bien été envoyé !");
-}, function (error) {
-alert("Une erreur est survenue, votre message n'a pas été envoyé !");
+		document.getElementById('contact-form').addEventListener('submit', function (event) {
+		event.preventDefault();
+		emailjs.sendForm('service_w4p95ya', 'contact_form', this).then(function () {
+		alert("Votre message a bien été envoyé !");
+}, 
+	function (error) {
+		alert("Une erreur est survenue, votre message n'a pas été envoyé !");
 });
 });
 }
 	</script>
 
-	<h3>
-		Formulaire de Contact</h3>
+	<h3>Formulaire de Contact</h3>
 
 	<form id="contact-form">
 		<div class="form-row d-block">
@@ -46,15 +43,8 @@ alert("Une erreur est survenue, votre message n'a pas été envoyé !");
 					<input class="btn btn-info" type="submit" value="envoyer">
 				</div>
 			</div>
-		</form>
-
-{# {% for message in app.flashes('message') %}
-    <div class="alert alert-success" role="alert">
-      {{ message }}
-    </div>
-  {% endfor %}
-  
-  {{form(contactForm)}} #}
-
+		</div>
+	</form>
 {% endblock %}
 
+	
