--- a/public/Candy.css
+++ b/public/Candy.css
@@ -11,11 +11,15 @@ html{
  width: 100%;
  height: 170px;
 }
-.Logo__container_bd-grid{
+/* .Logo__container_bd-grid{
     height: 150px;
     width: 150px;
     background-color:black;
 
+} */
+.logo_Candy_img{
+    width: 150px;
+    height:150px;
 }
 .header__box{
     display: flex;
@@ -42,18 +46,21 @@ a.nav-link{
 }
 .Accueil{
     float: left;
-  width: 100%;
-  padding: 5px;
-  flex-wrap:wrap;
-  flex-direction:row;
+    width: 80%;
+    padding: 5px;
+    flex-wrap:wrap;
+    flex-direction:row;
     display: flex;
     justify-content: space-between;
-    list-style: none;  
+    /* list-style: none;   */
 }
 .bonbons{
     width: 20%;
 }
+.hr{
+    width: 80%;
 
+}
 .cartes{
     width: 80%;
     height: auto;
@@ -114,11 +121,37 @@ h1{
 }
   
 img{
-    max-width: 100%;    
+    border-radius: 5%;
+    
 }
+.button-light{
+    font-family: "Rye";
+    display:block;
+    width:150px;
+    line-height:50px;
+    text-align:center;
+    /* vertical-align:middle; */
+    background:#E97575;
+    color:white;
+    border-radius: 10%;
+    text-decoration:none;
+}
+.btn-primary{
+    display:block;
+    width:150px;
+    line-height:50px;
+    text-align:center;
+    /* vertical-align:middle; */
+    background:#E97575;
+    color:white;
+    font-family: "Rye";
+    border-radius:10%;
+    text-decoration:none;
+}
+    
 .nav-footer{
     color:black;
-    margin:0
+    margin:0px;
 }
 
 .footer{
