--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,21 +3,21 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Candy Shop !{% endblock %}</title>
+       
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        {% block stylesheets %}
+        <script src="https://js.stripe.com/v3/"></script>
         <link rel ="stylesheet"  href="Candy.css">
-        <link rel ="stylesheet"  href="panier.css">
+        {# <link rel ="stylesheet"  href="panier.css"> #}
+        {# <link rel ="stylesheet"  href="produits.css"> #}
         {# <link rel ="stylesheet"  href="moncompte.css"> #}
-        <link href="{{ asset('produits.css') }}" rel="stylesheet"/>
+        <link href="{{ asset('produits.css') }}" rel="stylesheet">
         {# <link rel="preconnect" href="https://fonts.gstatic.com"> #}
         {# <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet"> #} 
         <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'> 
         {# <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous"> #}
         {# <link href="https://bootswatch.com/4/journal/bootstrap.min.css" rel="stylesheet"> #}
-       
         
-
-        {% block stylesheets %}
-      
         {% endblock %}
 
         
@@ -44,6 +44,7 @@
         <section class="Accueil" id="Accueil">
             <div class="Accueil__container bd-grid">
                 <img src="img/marshmallows.jpg" alt="marshmallows" class="marshmallows_img">
+            </div>
         <hr>
         <ul class="nav">
                 <li class="nav-item">
@@ -62,6 +63,10 @@
                     <a class="nav-link" href="/login">connexion</a>
                 </li>
 
+                <li class="nav-item">
+                    <a class="nav-link" href="/payment">paiement</a>
+                </li>
+
                <li class="nav-item">
                     <a class="nav-link" href="{{ path('contact')}}">contact</a>
                 </li> 
@@ -69,8 +74,8 @@
                 <li class="nav-item">
                     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
                 </li>
-                </ul>
-       
+        </ul>
+        </section>
         <hr>
     {% endblock %}
     
