--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -11,9 +11,42 @@
                 <h5 class="card-title"> {{produit.nom}} </h5>
                 <p class="card-text"> {{produit.description}}</p>
                 <a href="/panier/ajouter/{{produit.id}}" class="btn btn-primary">Ajouter au panier</a>
+                {# <button id="checkout-button">Acheter</button> #}
             </div>
         </div>
 
 
 {% endblock %}
- 
+{# {% block javascripts %}
+  <script type="text/javascript">
+      // Create an instance of the Stripe object with your publishable API key
+      var stripe = Stripe('pk_test_51IYeeVGYmr5sIrV4tBgGESQ7Kbok4swcFDj8PNwnsjWfIoctPy9d0LQMPNchz5A7TUkcHRFpeKkfkh99gCLwNfIq00RFzlvmyZ');
+      var checkoutButton = document.getElementById('checkout-button');
+
+      checkoutButton.addEventListener('click', function() {
+        // Create a new Checkout Session using the server-side endpoint you
+        // created in step 3.
+        fetch('/create-checkout-session', {
+          method: 'POST',
+        })
+        .then(function(response) {
+          return response.json();
+        })
+        .then(function(session) {
+          return stripe.redirectToCheckout({ sessionId: session.id });
+        })
+        .then(function(result) {
+          // If `redirectToCheckout` fails due to a browser or network
+          // error, you should display the localized error message to your
+          // customer using `error.message`.
+          if (result.error) {
+            alert(result.error.message);
+          }
+        })
+        .catch(function(error) {
+          console.error('Error:', error);
+        });
+      });
+    </script>
+{% endblock %}
+  #}
