--- a/templates/site/produits.html.twig
+++ b/templates/site/produits.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
 <div class="carte">
- <div class="card" style="width: 18rem;">
+ <div class="card" style="width: 90px;">
             <img src="img/boules de gomme.png" alt="boules de gomme" class="boulesdegomme_img">
         <div class="card-body">
             <h5 class="card-title">Boules de gomme</h5>
@@ -13,7 +13,7 @@
         </div>
         </div>
 
-<div class="card" style="width: 18rem;">
+<div class="card" style="width: 90px;">
             <img src="img/dragibus.png" alt="dragibus" class="dragibus_img">
         <div class="card-body">
             <h5 class="card-title">Dragibus</h5>
@@ -22,7 +22,7 @@
         </div>
         </div>
 
-<div class="card" style="width: 18rem;">
+<div class="card" style="width: 90px;">
             <img src="img/bonbons fruits.png " alt="bonbons fruits" class="bonbonsfruits_img"> 
         <div class="card-body">
             <h5 class="card-title">Bonbons aux fruits</h5>
@@ -31,7 +31,7 @@
         </div>
         </div>
 
-<div class="card" style="width: 18rem;">
+<div class="card" style="width: 90px;">
             <img src="img/sucettes.jpg" alt="sucettes" class="sucettes_img">
         <div class="card-body">
             <h5 class="card-title">Sucettes</h5>
@@ -40,7 +40,7 @@
         </div>
         </div>
 
-<div class="card" style="width: 18rem;">
+<div class="card" style="width: 90px;">
            <img src="img/bonbons_cola.PNG" alt="bonbons_cola" class="bonbonscola_img"> 
         <div class="card-body">
             <h5 class="card-title">Bonbons au cola</h5>
