--- a/public/Candy.css
+++ b/public/Candy.css
@@ -1,40 +1,27 @@
-
-html{
-    
-    scroll-behavior: smooth;
+*{
+    margin:0;
+    padding:0;
 }
 
-.contenu_header{
- display: flex;
- flex-direction: row;
- justify-content: space-between;
- width: 100%;
- height: 170px;
-}
-/* .Logo__container_bd-grid{
-    height: 150px;
-    width: 150px;
-    background-color:black;
-
-} */
 .logo_Candy_img{
     width: 150px;
     height:150px;
 }
 .header__box{
     display: flex;
-    margin-top: 20px;
-    margin-right: 40px;
+    margin-left: 90%;
+    width: 50px;
 }
 
 .nav{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: stretch;
     color: #E97575;
     text-decoration: none;
     list-style: none;
-    width: 33%;
+    width: 100%;
     padding: 5px;
 }
 a.nav-link.active{
@@ -44,25 +31,17 @@ a.nav-link{
     text-decoration: none;
     color: #E97575;
 }
-.Accueil{
-    float: left;
-    width: 80%;
-    padding: 5px;
-    flex-wrap:wrap;
-    flex-direction:row;
-    display: flex;
-    justify-content: space-between;
-    /* list-style: none;   */
+
+.marshmallows_img{
+    
+    margin-top: 90px;
+
 }
 .bonbons{
     width: 20%;
 }
-.hr{
-    width: 80%;
 
-}
 .cartes{
-    width: 80%;
     height: auto;
     margin: 0 0 9px;
     display: flex;
@@ -70,54 +49,30 @@ a.nav-link{
     justify-content: space-around; 
     align-items: stretch;
     float: left;
-    width: 50%;
-    padding: 5px;
-   
-    
+    width: 90%;
+    padding: 5px; 
     border: 0;
     outline: 0;
-    font-size: 100%;
-    -webkit-text-size-adjust: 100%;
-   
-    background: 0 0;
-  
-    /* margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px; */
     padding-inline-start: 40px;
     height: auto;
 }
 .card{
-    height: 5px;
-    width: 5px;
-    margin-left: 5px;
-    margin-top: 5px;
+    height: 10px;
+    width: 10px;
+    margin-left: 10px;
+    margin-top: 10px;
 }
 
-top::before{
-    position: absolute;
-    top: 100%;
-    right: 0;
-    left: 0;
-    height: 11px;
-    position: absolute;
-    width: 1220px;
-    height: 36px;
-    
-}
 h1{
-    height: 150px;
+    height: 3px;
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: stretch;
-    align-content: flex-start;
     text-align: center;
     font-family: "Rye";
     font-size: 250%;
-    color: #E97575; 
-    margin:  0px 0px 250px 0px;
+    color: #E97575;
+    margin-top: -100px; 
+   
 }
   
 img{
@@ -137,11 +92,11 @@ img{
     text-decoration:none;
 }
 .btn-primary{
-    display:block;
-    width:150px;
-    line-height:50px;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width:100%;
     text-align:center;
-    /* vertical-align:middle; */
     background:#E97575;
     color:white;
     font-family: "Rye";
@@ -150,25 +105,38 @@ img{
 }
     
 .nav-footer{
+    display: flex;
+    border-top: 1px,solid,rgb(185, 183, 183);
     color:black;
-    margin:0px;
+    margin-right: 50%;
+    display: flex;
+    flex-direction: row;
+    align-content: space-around;
+  
 }
 
 .footer{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    width: 100%;
-    margin-top: 350px;
-    margin-bottom: 20px;
-    color:black;
+    
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%;
+  margin-top: 300px;
+  margin-bottom: 0px;
+  
+    
 }
 .footer__box{
-    margin-left: 800px; 
+    /* margin-left: 90%; 
     width: 100%;
-    margin-top: 50px;
-    margin-bottom: 20px;
-    color:black;
+    margin-bottom: 5px;
+    color:black; */
+    margin-left: 26%; 
+  width: 100%;
+  margin-bottom: 0px;
+  color:black;
+
+  bottom:0;
+    
 }
 @media (max-width: 980px){} 
 
