--- a/templates/security/Registration.html.twig
+++ b/templates/security/Registration.html.twig
@@ -1,12 +1,13 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+<div id="container">
 	{{ form_start(form) }}
 
 	<div class="flex items-center justify-center font-body m-8">
 		<div class="w-full max-w-md bg-white shadow-lg rounded px-6 lg:px-12 pt-6 pb-8 mb-4">
 			<div class="text-dark-orange text-xl font-bold flex justify-center border-b-2 py-2 mb-4">
-				Créer un compte
+				<h1>Créer un compte</h1>
 			</div>
 			<div class="mb-4">
 				{{ form_label(form.email, 'E-mail*', {'label_attr': {'class':'block text-gray-700 text-sm lg:text-base font-normal mb-2'}}) }}
@@ -25,4 +26,5 @@
 		</div>
 	</div>
 	{{ form_end(form) }}
+</div>
 {% endblock %}
