--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,7 +4,10 @@
 {% endblock %}
 
 {% block body %}
+<div id="container">
 	<form method="post">
+	
+	
 		{% if error %}
 			<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 		{% endif %}
@@ -16,8 +19,10 @@
 				<a href="{{ path('app_logout') }}">Logout</a>
 			</div>
 		{% endif %}
-
-		<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+	<h1 class="h3 mb-3 font-weight-normal">Connexion</h1>	
+	{# <div class="connexion"> #}
+		
+		{# <h1 class="h3 mb-3 font-weight-normal">CONNEXION</h1> #}
 		<label for="inputEmail">Email</label>
 		<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
 		<label for="inputPassword">Password</label>
@@ -36,9 +41,12 @@
 		            </label>
 		        </div>
 		    #}
-
-		<button class="btn btn-lg btn-primary" type="submit">
-			Sign in
-		</button>
+		<input type="submit" id='submit' value='LOGIN' >
+		{# <button class="btn btn-lg btn-primary" type="submit">
+			
+		</button> #}
+		
+	{# </div> #}
 	</form>
+</div>
 {% endblock %}
