--- a/templates/site/accueil.html.twig
+++ b/templates/site/accueil.html.twig
@@ -7,7 +7,7 @@
 
 	<div class="cartes">
 		{% for produit in produits %}
-			<div class="card" style="width: 90px;">
+			<div class="card" >
 				<img src="{{produit.image}}" alt="dragibus" class="dragibus_img">
 				<div class="card-body">
 					<h5 class="card-title">{{produit.nom}}</h5>
